--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -1,68 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <style>
-        <link rel = "stylesheet" href = "./style.css" />
-        <meta charset="utf-8"/> <!codificacion de caracteres>
-        <title>Tarea HTML de Rodrigombia</title> <!esto es lo que aparece en la pestaña> 
-        <meta name="description" content="Esta es mi primer pagina"/> <!esta etiqueta no se ve, solo le da info al navegador, y tmp tiene un par, va sola>
-        <meta name="author" content="Rodrigombia"/>
-        <meta name="keywords" content="tags de la pagina para el buscador"/>
-        <!en esta parte va todo el estilo de la pagina>
-        </style>
+        <title>tarea HTML de Rodrigo</title>
+        <!para acceder a clases se usa el . y para id se usa # >
         <link rel = "stylesheet" href = "./style.css" />
     </head>
-    <body>
-        <header> 
-            <h1 style="color: crimson;">Tarea HTML de Rodrigombia</h1>
-        </header>
 
+    <body>
         <section><!aca va el contenido principal>
             <div class="divClass">
                 <h1>Rodrigo</h1>
                 <h3>Henry</h3>
                 <h4>tarea de HTML / CSS</h4>       
             </div>
+
             <div class="divClass">
-                <p><span id="spanId">Mi comida favorita es la milanesa napolitana con papas fritas</span></p>
-            </div>
-            <div 
-                id="thirdDiv">
+                <span id="spanId">Mi comida favorita es la milanesa napolitana con papas fritas</span>
                 <a href="https://www.rodiziogrill.com">Restaurante Rodrizio</a>
             </div>
-            <div>
+
+            <div id="thirdDiv">
                 <ul>
                     <li>
-                      <img width="400px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.UWtlPXWt6fGm34RlsywPSAHaE8%26pid%3DApi&f=1" />
+                      <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.UWtlPXWt6fGm34RlsywPSAHaE8%26pid%3DApi&f=1" />
                     </li>
                     <li>
-                      <img width="400px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.LgXOiTwY3XUe90JUp5QsagHaFj%26pid%3DApi&f=1" />
+                      <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.LgXOiTwY3XUe90JUp5QsagHaFj%26pid%3DApi&f=1" />
                     </li>
                 </ul>
             </div>
         </section>
 
-        <footer>
-            Derechos reservados 2010-2020
-        </footer>
     </body>
 </html>
-
-
-
-
-<!
-II Añade un poco de estilo
-  A. Agregue la etiqueta de estilo a su documento HTML.
-  B. Asignar al tercer div el id "thirdDiv".
-  C. Asignar a los otros divs la clase "divClass".
-  D. Asignar al span que se encuentra dentro de su segundo div el id "spanId".
-  E. Agregue una regla de estilo a su elemento h1 cambiando el color del texto (Listado de colores: https://www.crockford.com/wrrrld/color.html).
-  F. Agregue una regla de estilo al elemento img dándole un ancho de 400px.
-  G. Agregue una regla de estilo a 'thirdDiv' cambiando la altura a 600px y el ancho a 500px.
-  H. Agregue una regla de estilo a 'thirdDiv' cambiando el color de fondo por el que quiera.
-  I. Cambie el tamaño de la fuente para 'spanId' a 18px.
-  J. Asignar al id 'spanId' un margen de 50px.
-  K. Asignar al id 'thirdDiv' un relleno (padding) de 50px.
-
-  L. Asignar al id 'thirdDiv' un borde con cualquier ancho de color y estilo que elija.>
